Add PUBLIC_PHYSICAL_NETWORK to pybot command and yaml files
Change-Id: Iaba2c4e61dd7e62794eb315a255abfd16309bab5
Signed-off-by: Revital Aronis <revital.aronis@hpe.com>
Signed-off-by: Jamo Luhrsen <jluhrsen@redhat.com>

--- a/jjb/netvirt/netvirt-legacy-csit-multi-openstack.yaml
+++ b/jjb/netvirt/netvirt-legacy-csit-multi-openstack.yaml
@@ -59,6 +59,8 @@
 
     public-bridge: 'br-ex'
 
+    public-physical-network: 'physnet1'
+
     enable-openstack-services: 'q-svc,q-dhcp,q-meta,n-cauth,tempest'
 
     disable-openstack-services: 'swift,cinder,n-net,q-vpn,n-cpu'
