--- a/jjb/vtn/vtn-manager-csit-1node-openstack.yaml
+++ b/jjb/vtn/vtn-manager-csit-1node-openstack.yaml
@@ -51,6 +51,8 @@
 
     tenant-network-type: 'local'
 
+    public-physical-network: 'physnet1'
+
     security-group-mode: 'none'
 
     robot-options: ''
