--- a/jjb/groupbasedpolicy/groupbasedpolicy-csit-1node-openstack.yaml
+++ b/jjb/groupbasedpolicy/groupbasedpolicy-csit-1node-openstack.yaml
@@ -47,6 +47,8 @@
 
     public-bridge: 'br-int'
 
+    public-physical-network: 'physnet1'
+
     enable-openstack-services: 'q-svc,q-dhcp,q-meta,n-cauth,tempest'
 
     disable-openstack-services: 'swift,cinder,n-net,q-vpn,n-cpu'
