--- a/jjb/integration/integration-templates.yaml
+++ b/jjb/integration/integration-templates.yaml
@@ -1020,6 +1020,10 @@
             name: SECURITY_GROUP_MODE
             default: '{security-group-mode}'
             description: 'Security Group Mode to be used in netvirt aclservice config'
+        - string:
+            name: PUBLIC_PHYSICAL_NETWORK
+            default: '{public-physical-network}'
+            description: 'provider physical network used for flat/vlan networks'
     scm:
         - integration-gerrit-scm:
             basedir: 'test'
@@ -1146,6 +1150,10 @@
             name: SECURITY_GROUP_MODE
             default: '{security-group-mode}'
             description: 'Security Group Mode to be used in netvirt aclservice config'
+        - string:
+            name: PUBLIC_PHYSICAL_NETWORK
+            default: '{public-physical-network}'
+            description: 'provider physical network used for flat/vlan networks'
     scm:
         - integration-gerrit-scm:
             basedir: 'test'
