--- a/jjb/netvirt/netvirt-csit-multi-openstack.yaml
+++ b/jjb/netvirt/netvirt-csit-multi-openstack.yaml
@@ -76,6 +76,8 @@
 
     public-bridge: 'br-physnet1'
 
+    public-physical-network: 'physnet1'
+
     enable-openstack-services: 'q-svc,q-dhcp,q-meta,n-cauth,tempest'
 
     disable-openstack-services: 'swift,cinder,n-net,q-vpn,n-cpu'
