Include baseline.sh in the file-path
* Fix `templates` name in path

Change-Id: I9393cdffb752ba115b096645059fe4d18fb4d19a
Signed-off-by: Anil Belur <abelur@linuxfoundation.org>

--- a/jjb/releng-jobs.yaml
+++ b/jjb/releng-jobs.yaml
@@ -461,7 +461,7 @@
                     - compare-type: ANT
                       pattern: 'packer/vars/{platforms}.json'
                     - compare-type: ANT
-                      pattern: 'packer/template/{templates}.json'
+                      pattern: 'packer/templates/{templates}.json'
                     - compare-type: ANT
                       pattern: 'packer/provision/{templates}.sh'
                     - compare-type: ANT
@@ -470,6 +470,8 @@
                       pattern: 'packer/provision/rh-user_data.sh'
                     - compare-type: ANT
                       pattern: 'packer/provision/devstack-pre-pip.sh'
+                    - compare-type: ANT
+                      pattern: 'packer/provision/baseline.sh'
 
     builders:
         - packer-validate:
