Exclude ubuntu14.04 devstack from being built
Change-Id: I66c7f895a9d2e6ef44d29b63da2341e161fa1091
Signed-off-by: Anil Belur <abelur@linuxfoundation.org>

--- a/jjb/releng-jobs.yaml
+++ b/jjb/releng-jobs.yaml
@@ -47,6 +47,8 @@
           templates: devstack-pre-pip-mitaka
         - platforms: ubuntu-14.04
           templates: devstack-pre-pip-newton
+        - platforms: ubuntu-14.04
+          templates: devstack
 
     project-type: freestyle
     archive-artifacts: '**/*.log'
