Remove vpnservices from hwvtep job names
Couple reasons:
1. we removed vpnservices from the jobs a while back
2. path is too long problem as described below.

The virtualenv pip install has a limit for the path that [1] hit. The error is below. Notice the output is truncated at ...nodl-v2-up.

23:54:53 /tmp/hudson6603185957697917851.sh: /w/workspace/netvirt-vpnservices-csit-hwvtep-1node-openstack-newton-nodl-v2-upstream-transparent-boron/.venv-openstack/bin/pip: /w/workspace/netvirt-vpnservices-csit-hwvtep-1node-openstack-newton-nodl-v2-up: bad interpreter: No such file or directory

[1] https://jenkins.opendaylight.org/releng/job/netvirt-vpnservices-csit-hwvtep-1node-openstack-newton-nodl-v2-upstream-transparent-boron/15/console

Change-Id: I80c7560d9ea58674cd2e52bf1d5dbc7ece8e7812
Signed-off-by: Sam Hague <shague@redhat.com>

--- a/jjb/netvirt/netvirt-csit-hwvtep-openstack.yaml
+++ b/jjb/netvirt/netvirt-csit-hwvtep-openstack.yaml
@@ -1,9 +1,9 @@
 - project:
-    name: netvirt-vpnservices-csit-hwvtep-openstack-integration
+    name: netvirt-csit-hwvtep-openstack-integration
     jobs:
         - '{project}-csit-hwvtep-{topology}-openstack-{openstack}-{functionality}-{stream}'
 
-    project: 'netvirt-vpnservices'
+    project: 'netvirt'
 
     topology:
         - 1node:
