Replace ubuntu_mininet with updated label
Change-Id: Ica3d044474bad775b3d30c5a4d33ab0954fe9799
Signed-off-by: Anil Belur <abelur@linuxfoundation.org>

--- a/jjb/packaging/packaging.yaml
+++ b/jjb/packaging/packaging.yaml
@@ -201,7 +201,7 @@
 - job-template:
     name: 'packaging-build-deb-{stream}'
 
-    node: ubuntu_mininet
+    node: ubuntu-trusty-mininet-2c-2g
 
     project-type: freestyle
 
