enable driver_type gre and ml2_gre
Change-Id: I90e1818115b1ec8cbbb13a4c1cd12ca1f8014545
Signed-off-by: Srinivas Rachakonda <srinivas.rachakonda@gmail.com>

--- a/jjb/defaults.yaml
+++ b/jjb/defaults.yaml
@@ -56,6 +56,7 @@
     enable-openstack-services: ''
     enable-openstack-compute-services: ''
     enable-openstack-network-services: 'neutron,neutron-api,neutron-dhcp,neutron-metadata-agent'
+    enable-gre-type-driver: 'no'
     ipsec-vxlan-tunnels-enabled: 'no'
     lbaas-service-provider: ''
     num-openstack-sites: 1
