Support testing with any OVS version
On some tests we require specific OVS versions that for the time being
are not being provided by upstream repos. This patch adds a parameter
to openstack integration jobs to install a custom OVS version either
building it from source or pulling it from a dedicated repo.

Change-Id: I247e59764fb8377c9e343d984f390a49b8d8d52e
Signed-off-by: Jaime Caamaño Ruiz <jcaamano@suse.com>
Signed-off-by: gvrangan <venkatrangang@hcl.com>

--- a/jjb/defaults.yaml
+++ b/jjb/defaults.yaml
@@ -73,6 +73,7 @@
     os-ctl-cnt: 0
     os-cmp-cnt: 0
     os-std-topo: '0cmb-1ctl-2cmp'
+    ovs-install: ''
 
     # openstack-infra-parameters defaults
     archive-artifacts: ''
