Support testing with any OVS version
On some tests we require specific OVS versions that for the time being
are not being provided by upstream repos. This patch adds a parameter
to openstack integration jobs to install a custom OVS version either
building it from source or pulling it from a dedicated repo.

Change-Id: I247e59764fb8377c9e343d984f390a49b8d8d52e
Signed-off-by: Jaime Caamaño Ruiz <jcaamano@suse.com>
Signed-off-by: gvrangan <venkatrangang@hcl.com>

--- a/jjb/netvirt/netvirt-csit-multi-openstack.yaml
+++ b/jjb/netvirt/netvirt-csit-multi-openstack.yaml
@@ -275,8 +275,10 @@
     stream:
       - fluorine:
           branch: 'master'
+          ovs-install: 'v2.9.2'
       - oxygen:
           branch: 'stable/oxygen'
+          ovs-install: 'v2.6.1-nsh'
 
     openstack:
       - queens:
