Support to Test with Any OVS Version
We require specific OVS version that for the time being there are not
being provided by any upstream package repository. While it is sorted
out, build our own at deploy time. If the situation prolongs in time,
we will update packer jobs to include this in the base images.

Change-Id: I247e59764fb8377c9e343d984f390a49b8d8d52e
Signed-off-by: Jaime Caamaño Ruiz <jcaamano@suse.com>

--- a/jjb/integration/integration-templates.yaml
+++ b/jjb/integration/integration-templates.yaml
@@ -988,6 +988,22 @@
           name: ODL_SNAT_MODE
           default: '{odl-snat-mode}'
           description: 'The SNAT mode to be configured - options are conntrack/controller.'
+      - string:
+          name: OVS_INSTALL_MODE
+          default: '{ovs-install-mode}'
+          description: 'Mode in which OVS needs to be installed, either BUILD or YUMREPO Empty for Neither'
+      - string:
+          name: OVS_CUSTOM_VERSION
+          default: '{ovs-custom-version}'
+          description: 'Version of OVS to be installed'
+      - string:
+          name: OVS_YUM_REPO_URL
+          default: '{ovs-yum-repo-url}'
+          description: 'Repo to use for fetching OVS'
+      - string:
+          name: OVS_ENABLE_DPDK
+          default: '{ovs-enable-dpdk}'
+          description: 'YES/NO to Enable DPDK in OVS'
     scm:
       - integration-gerrit-scm:
           basedir: 'test'
@@ -1206,7 +1222,22 @@
           name: ODL_SNAT_MODE
           default: '{odl-snat-mode}'
           description: 'The SNAT mode to be configured - options are conntrack/controller.'
-
+      - string:
+          name: OVS_INSTALL_MODE
+          default: '{ovs-install-mode}'
+          description: 'Mode in which OVS needs to be installed, either BUILD or YUMREPO Empty for Neither'
+      - string:
+          name: OVS_CUSTOM_VERSION
+          default: '{ovs-custom-version}'
+          description: 'Version of OVS to be installed'
+      - string:
+          name: OVS_YUM_REPO_URL
+          default: '{ovs-yum-repo-url}'
+          description: 'Repo to use for fetching OVS'
+      - string:
+          name: OVS_ENABLE_DPDK
+          default: '{ovs-enable-dpdk}'
+          description: 'YES/NO to Enable DPDK in OVS'
     scm:
       - integration-gerrit-scm:
           basedir: 'test'
