--- a/jjb/defaults.yaml
+++ b/jjb/defaults.yaml
@@ -73,6 +73,10 @@
     os-ctl-cnt: 0
     os-cmp-cnt: 0
     os-std-topo: '0cmb-1ctl-2cmp'
+    ovs-install-mode: ''
+    ovs-custom-version: ''
+    ovs-yum-repo-url: ''
+    ovs-enable-dpdk: 'no'
 
     # openstack-infra-parameters defaults
     archive-artifacts: ''
