Fail genius csit on exceptions
JIRA: GENIUS-200

Change-Id: Ia7dbc5038e4fdec8559454d6140e3ee189e5fcff
Signed-off-by: Vishal Thapar <vthapar@redhat.com>

--- a/jjb/genius/genius-csit-genius.yaml
+++ b/jjb/genius/genius-csit-genius.yaml
@@ -28,6 +28,7 @@
     tools_system_count: 3
 
     install-features: 'odl-genius-rest'
+    robot-options: '-v FAIL_ON_EXCEPTIONS:False'
 
 - project:
     name: genius-csit-genius-verify
