Add ask/tell separate jobs
Change-Id: I4ec2722fa8bee1809ea69ff3f46ef4cab9fe392f
Signed-off-by: Vishal Thapar <vthapar@redhat.com>

--- a/jjb/controller/controller-csit-clustering.yaml
+++ b/jjb/controller/controller-csit-clustering.yaml
@@ -6,7 +6,9 @@
       - inttest-csit-verify-3node
 
     project: 'controller'
-    functionality: 'clustering'
+    functionality:
+      - 'clustering-ask'
+      - 'clustering-tell'
 
     stream:
       - neon:
