Fix Netvirt SFC CSIT Job
 Problem:
  Job was deploying networkiong-sfc from "Master"
  Master included this recently merged patch
  https://review.openstack.org/#/c/569843/
  causing failures in handling openstack sfc comamnds.

 Fix:
 Patch sets networking-sfc to use the corresponding branch.

Change-Id: I14ddc06ae0a019590036e8c314121cdab3dac48d
Signed-off-by: gvrangan <venkatrangang@hcl.com>

--- a/jjb/netvirt/netvirt-csit-multi-openstack.yaml
+++ b/jjb/netvirt/netvirt-csit-multi-openstack.yaml
@@ -250,7 +250,7 @@
     jobs:
       - inttest-csit-openstack
 
-    project: 'netvirt'
+    project: 'netvirt-fixcsit'
     security-group-mode: 'stateful'
     odl_system_flavor: odl-highcpu-4
     openstack_system2_flavor: odl-highcpu-2
