Fix mdsal distribution-check neon clone branch
Change-Id: I7bceea59797fa4bf829fb1e4b5bc6e8046418235
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/mdsal/mdsal.yaml
+++ b/jjb/mdsal/mdsal.yaml
@@ -37,6 +37,7 @@
     jobs:
       - '{project-name}-distribution-check-{stream}':
           mvn-version: 'mvn35'
+          distribution_branch: master
       - '{project-name}-maven-javadoc-jobs':
           mvn-version: 'mvn33'
       - '{project-name}-rtd-jobs':
