Archive the exceptions.txt file
Change-Id: I81a0836bba9d1c1b6df2d08d0eb03e5c28607017
Signed-off-by: Sam Hague <shague@redhat.com>

--- a/jjb/integration/integration-macros.yaml
+++ b/jjb/integration/integration-macros.yaml
@@ -561,7 +561,7 @@
                     for i in `seq 1 ${NUM_ODL_SYSTEM}`; do
                         NODE_FOLDER="./archives/odl_${i}"
                         mkdir -p ${NODE_FOLDER}
-                        mv odl${i}_karaf* ${NODE_FOLDER} || true
+                        mv odl${i}_* ${NODE_FOLDER} || true
                         mv karaf_${i}_*_threads* ${NODE_FOLDER} || true
                         mv *_${i}.png ${NODE_FOLDER} || true
                     done
