Fix all the Openstack SFC Job Issues
List of Changes
Problem:
 plugin.sh script was looking for neutron plugin q-svc
 to enable the paramaters.
Change:
 - Checkout the latest version of the script from "Master"
 branch of networking-sfc
 - pushed a patch to networking-sfc for the same

Problem:
  SFC Test needs to use Ubuntu Image which requires more resource
Change:
  - Modify the Compute Node Flavor to include more RAM/CPU
  - Modify the size of tmpfs created from 2G to 12G

Problem:
  The Current Netvirt-SFC fails with multiple compute nodes
Change:
  - Made the number of compute nodes as "1"
  - Need to debug the multiple compute node problem

Change-Id: I2646d4f8cdc64a3efdfab35a3e00c280453637af
Signed-off-by: gvrangan <venkatrangang@hcl.com>

--- a/jjb/netvirt/netvirt-csit-multi-openstack.yaml
+++ b/jjb/netvirt/netvirt-csit-multi-openstack.yaml
@@ -253,14 +253,14 @@
     project: 'netvirt'
     security-group-mode: 'stateful'
     odl_system_flavor: odl-highcpu-4
-    openstack_system2_flavor: odl-highcpu-2
+    openstack_system2_flavor: odl-highcpu-8
     os-cmb-cnt: 0
     os-ctl-cnt: 1
-    os-cmp-cnt: 2
+    os-cmp-cnt: 1
 
     topology:
       - 1node:
-          openstack_system2_count: 2
+          openstack_system2_count: 1
           odl_system_count: 1
           enable-haproxy: 'no'
           install-features: 'odl-netvirt-sfc'
@@ -275,8 +275,10 @@
     stream:
       - fluorine:
           branch: 'master'
+          ovs-install: 'v2.9.2'    
       - oxygen:
           branch: 'stable/oxygen'
+          ovs-install: 'v2.6.1-nsh'
 
     openstack:
       - queens:
