--- a/jjb/mdsal/mdsal-csit-bindingv1.yaml
+++ b/jjb/mdsal/mdsal-csit-bindingv1.yaml
@@ -6,6 +6,7 @@
 
     # The project name
     project: 'mdsal'
+    disabled: true
 
     # The functionality under test
     functionality: 'bindingv1'
