disable mdsal v1 binding tests
Talking with Robert, the v1 tests need to be rewritten so disable
then until thhen.

Change-Id: I3aa7a51712fdd1f8c679553d366d48fd815374e2
Signed-off-by: Sam Hague <shague@redhat.com>

--- a/jjb/defaults.yaml
+++ b/jjb/defaults.yaml
@@ -6,6 +6,7 @@
     functionality: global
     stream: global
     prefix: ''  # A prefix for job names sandbox for example: user-
+    disable-job: false
 
     scriptplan: '{project}.txt'
     configplan: '{project}.txt'
