Add netvirt csit job to use apex images
Change-Id: I1c5c3f59773d314ae9579873eae8d78ed00543df
Signed-off-by: Jamo Luhrsen <jluhrsen@redhat.com>
Signed-off-by: Sam Hague <shague@redhat.com>
Signed-off-by: Jamo Luhrsen <jluhrsen@redhat.com>

--- a/jjb/defaults.yaml
+++ b/jjb/defaults.yaml
@@ -113,6 +113,7 @@
     trigger-jobs: ''
     debug-map: ''
     test-suites: ''
+    gate-job: 'False'
 
     # Data for csit-verify jobs
     # Branch for "last" version detection
