--- a/jjb/integration/integration-templates.yaml
+++ b/jjb/integration/integration-templates.yaml
@@ -1399,3 +1399,128 @@
       - email-notification:
           email-recipients: '{email-recipients}'
           email-prefix: '[{project}]'
+
+- job-template:
+    # yamllint disable-line rule:line-length
+    name: '{prefix}{project}-csit-{topology}-{os-cmb-cnt}cmb-{os-ctl-cnt}ctl-{os-cmp-cnt}cmp-apex-{openstack}-{functionality}-{stream}'
+    id: inttest-csit-apex
+    disabled: false
+
+    project-type: freestyle
+    node: centos7-robot-2c-8g
+    concurrent: true
+
+    properties:
+      - opendaylight-infra-properties:
+          build-days-to-keep: '{build-days-to-keep}'
+
+    parameters:
+      - opendaylight-infra-parameters:
+          os-cloud: '{os-cloud}'
+          project: 'integration/test'
+          branch: '{branch}'
+          refspec: 'refs/heads/{branch}'
+          artifacts: '{archive-artifacts}'
+      - integration-distribution-branch:
+          branch: '{branch}'
+      - integration-distribution-stream:
+          stream: '{stream}'
+      - integration-bundle-url:
+          bundle-url: '{bundle-url}'
+      - integration-repo-url:
+          repo-url: '{repo-url}'
+      - integration-controller-features:
+          controller-features: '{install-features}'
+      - integration-controller-debug-map:
+          controller-debug-map: '{debug-map}'
+      - integration-test-options:
+          test-options: '{robot-options}'
+      - integration-test-plan:
+          test-plan: '{testplan}'
+      - integration-test-suites:
+          test-suites: '{test-suites}'
+      - integration-patch-refspec:
+          branch: 'master'
+      - integration-jdk-version:
+          jdkversion: '{jre}'
+      - distribution-karaf-version:
+          karaf-version: '{karaf-version}'
+      - integration-use-features-boot:
+          use-features-boot: '{use-features-boot}'
+      - string:
+          name: OPENSTACK_BRANCH
+          default: '{openstack-branch}'
+          description: 'Openstack version to use with devstack'
+      - string:
+          name: IPSEC_VXLAN_TUNNELS_ENABLED
+          default: '{ipsec-vxlan-tunnels-enabled}'
+          description: 'Enable ipsec over vxlan support for all controllers and computes'
+      - string:
+          name: PUBLIC_BRIDGE
+          default: '{public-bridge}'
+          description: 'Specifies public bridge for provider and external networking'
+      - string:
+          name: SECURITY_GROUP_MODE
+          default: '{security-group-mode}'
+          description: 'Security Group Mode to be used in netvirt aclservice config'
+      - string:
+          name: ENABLE_ITM_DIRECT_TUNNELS
+          default: '{enable-itm-direct-tunnels}'
+          description: 'Tunnel Configuration mode to be used in genius ifm config'
+      - string:
+          name: PUBLIC_PHYSICAL_NETWORK
+          default: '{public-physical-network}'
+          description: 'provider physical network used for flat/vlan networks'
+      - string:
+          name: ODL_SNAT_MODE
+          default: '{odl-snat-mode}'
+          description: 'The SNAT mode to be configured - options are conntrack/controller.'
+
+    scm:
+      - integration-gerrit-scm:
+          basedir: 'test'
+          refspec: '$PATCHREFSPEC'
+          branch: 'master'
+
+    wrappers:
+      - opendaylight-infra-wrappers:
+          build-timeout: '{build-timeout}'
+
+    triggers:
+      - timed: '{schedule}'
+
+    builders:
+      - lf-infra-pre-build
+      - integration-apex-stack-3-type:
+          stack-template: '{stack-template}'
+          vm_0_count: '{apex_controller_count}'
+          vm_0_flavor: '{apex_controller_flavor}'
+          vm_0_image: '{apex_controller_image}'
+          vm_1_count: '1'
+          vm_1_flavor: '{apex_compute_0_flavor}'
+          vm_1_image: '{apex_compute_0_image}'
+          vm_2_count: '1'
+          vm_2_flavor: '{apex_compute_1_flavor}'
+          vm_2_image: '{apex_compute_1_image}'
+      - integration-install-robotframework
+      - integration-detect-variables
+      - integration-install-common-functions
+      - inject:
+          properties-file: 'env.properties'
+      - integration-get-apex-addresses
+      - inject:
+          properties-file: 'slave_addresses.txt'
+      - integration-apex-run-tests
+      - integration-cleanup-tmp
+
+    publishers:
+      - integration-robot-tempest:
+          unstable-if: 0.0
+          pass-if: 100.0
+      - email-notification:
+          email-recipients: '{email-recipients}'
+          email-prefix: '[{project}]'
+      - integration-csit-archive-build
+      - integration-csit-run-postscript
+      - releng-openstack-stack-delete
+      - lf-infra-publish
