Use lf-releng server for lf-infra projects
This is a special case Gerrit server for LF Infra projects. We will
reserve the other keyword "LinuxFoundation" for ODL reporting to
upstream Linux Foundation projects as a downstream instead.

Change-Id: Ic0765eb51920b5b24bc51e81907418578d259624
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/lf-infra/lf-infra-jobs.yaml
+++ b/jjb/lf-infra/lf-infra-jobs.yaml
@@ -12,7 +12,7 @@
     branch: '*'
 
     git-url: https://gerrit.linuxfoundation.org/infra/$GERRIT_PROJECT
-    gerrit-server-name: LinuxFoundation
+    gerrit-server-name: lf-releng
 
 - project:
     name: lf-infra-ci-workshop
@@ -26,7 +26,7 @@
     branch: '*'
 
     git-url: https://gerrit.linuxfoundation.org/infra/$GERRIT_PROJECT
-    gerrit-server-name: LinuxFoundation
+    gerrit-server-name: lf-releng
 
 - project:
     name: lf-infra-common-packer
@@ -44,7 +44,7 @@
     branch: '*'
 
     git-url: https://gerrit.linuxfoundation.org/infra/$GERRIT_PROJECT
-    gerrit-server-name: LinuxFoundation
+    gerrit-server-name: lf-releng
 
 - project:
     name: lf-infra-docs
@@ -62,7 +62,7 @@
     branch: '*'
 
     git-url: https://gerrit.linuxfoundation.org/infra/$GERRIT_PROJECT
-    gerrit-server-name: LinuxFoundation
+    gerrit-server-name: lf-releng
 
 - project:
     name: lf-infra-docs-conf
@@ -80,7 +80,7 @@
     branch: '*'
 
     git-url: https://gerrit.linuxfoundation.org/infra/$GERRIT_PROJECT
-    gerrit-server-name: LinuxFoundation
+    gerrit-server-name: lf-releng
 
 - project:
     name: lf-infra-global-jjb
@@ -98,7 +98,7 @@
     branch: '*'
 
     git-url: https://gerrit.linuxfoundation.org/infra/$GERRIT_PROJECT
-    gerrit-server-name: LinuxFoundation
+    gerrit-server-name: lf-releng
 
 - project:
     name: lf-infra-lftools
@@ -116,7 +116,7 @@
     branch: '*'
 
     git-url: https://gerrit.linuxfoundation.org/infra/$GERRIT_PROJECT
-    gerrit-server-name: LinuxFoundation
+    gerrit-server-name: lf-releng
 
 - project:
     name: lf-infra-license-checker
@@ -130,7 +130,7 @@
     branch: '*'
 
     git-url: https://gerrit.linuxfoundation.org/infra/$GERRIT_PROJECT
-    gerrit-server-name: LinuxFoundation
+    gerrit-server-name: lf-releng
 
 - view:
     name: lf-infra
