--- a/jjb/lfn/lfn.yaml
+++ b/jjb/lfn/lfn.yaml
@@ -15,7 +15,7 @@
     branch: '*'
 
     git-url: https://gerrit.linuxfoundation.org/infra/$GERRIT_PROJECT
-    gerrit-server-name: LinuxFoundation
+    gerrit-server-name: lf-releng
 
 - view:
     name: lfn
